<resources>
    <string name="app_name">Benchmark Base64 x ProtocolBuffers</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Server settings</string>

    <string name="title_host_config">Backend Server settings</string>

    <string name="title_edittext_host">Server IP address</string>
    <string name="summary_edittext_host">Here you can configure server address</string>
    <string name="dialog_title_host">Server host address</string>
    <string name="default_host">dispatchr.crossover.com</string>

    <string name="title_edittext_http_port">Http port</string>
    <string name="summary_edittext_http_port">Here you can configure http port</string>
    <string name="dialog_http_port">HTTP port</string>
    <string name="default_http_port">9090</string>

    <string name="title_edittext_ws_port">WebSocket port</string>
    <string name="summary_edittext_ws_port">Here you can configure ws port</string>
    <string name="dialog_ws_port">WebSocket port</string>
    <string name="default_ws_port">9080</string>

    <string name="title_edittext_ws_compress_port">Compress Webservice port</string>
    <string name="summary_edittext_ws_compress_port">Here you can configure compress service port</string>
    <string name="dialog_ws_compress_port">Upload use case port</string>
    <string name="default_ws_compress_port">7070</string>

    <string name="please_wait">Please wait…</string>


</resources>